<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.form.FormPemeliharaanAkunFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/pemeliharaan_akun"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layanan_yang_diajukan"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <!-- RadioGroup untuk Pilihan -->
        <RadioGroup
            android:id="@+id/radioGroupLayanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitleText">

            <RadioButton
                android:id="@+id/radioSubDomain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subdomain" />

            <RadioButton
                android:id="@+id/radioHosting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hosting" />

            <RadioButton
                android:id="@+id/radioVPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virtual_private_server_vps" />

            <RadioButton
                android:id="@+id/radioWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website" />

            <RadioButton
                android:id="@+id/radioEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <RadioButton
                android:id="@+id/radioGerbang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gerbang_itk" />

            <RadioButton
                android:id="@+id/radioMic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/microsoft_365" />
        </RadioGroup>

        <TextView
            android:id="@+id/subtitleText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_pemeliharaan"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupLayanan" />

        <RadioGroup
            android:id="@+id/radioGroupJenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitleText2">

            <RadioButton
                android:id="@+id/radioReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_akun" />

            <RadioButton
                android:id="@+id/radioPerubahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perubahan_penambahan_data_layanan" />

            <RadioButton
                android:id="@+id/radioPenambahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penambahan_penyimpanan" />

            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lainnya" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutOther"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sebutkan_jenis_pemeliharaan"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupJenis">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namaAkunLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama_akun_layanan"
            app:boxStrokeColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOther"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alasanLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/alasan_pemeliharaan"
            app:boxStrokeColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/namaAkunLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/bukti_data_diri"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alasanLayout" />

        <!-- Button untuk memilih file -->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChooseFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/primary_blue"
                app:strokeWidth="2dp"
                app:cornerRadius="8dp"
                android:text="@string/choose_file"
                android:textColor="@color/primary_blue"/>

            <TextView
                android:id="@+id/tvFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/no_file_selected"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:text="@string/max_2mb"
            android:textColor="#888888"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>